tests/rosetta/transpiler/C/bitmap-b-zier-curves-cubic.error
compile failed: exit status 1: /tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c: In function ‘_mem’:
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:75:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   75 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c: In function ‘newBitmap’:
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:123:51: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  123 |                         row = list_append_int_new(row, row_len, (Pixel){.r = 0, .g = 0, .b = 0});
      |                                                   ^~~
      |                                                   |
      |                                                   Pixel *
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:25:44: note: expected ‘const int *’ but argument is of type ‘Pixel *’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:123:72: error: incompatible type for argument 3 of ‘list_append_int_new’
  123 |                         row = list_append_int_new(row, row_len, (Pixel){.r = 0, .g = 0, .b = 0});
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                        |
      |                                                                        Pixel
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:25:65: note: expected ‘int’ but argument is of type ‘Pixel’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:126:32: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  126 |         d = list_append_strptr(d, &d_len, row);
      |                                ^
      |                                |
      |                                Pixel **
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:39:55: note: expected ‘const char ***’ but argument is of type ‘Pixel **’
   39 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:126:43: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  126 |         d = list_append_strptr(d, &d_len, row);
      |                                           ^~~
      |                                           |
      |                                           Pixel *
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:39:86: note: expected ‘const char **’ but argument is of type ‘Pixel *’
   39 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:126:11: warning: assignment to ‘Pixel **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  126 |         d = list_append_strptr(d, &d_len, row);
      |           ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:130:56: warning: initialization of ‘int’ from ‘Pixel **’ makes integer from pointer without a cast [-Wint-conversion]
  130 |     return (Anon1){.cols = cols, .rows = rows, .data = d};
      |                                                        ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:130:56: note: (near initialization for ‘(anonymous).data’)
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c: In function ‘setPx’:
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:134:17: error: ‘MapSS’ has no member named ‘cols’
  134 |     int cols = b.cols;
      |                 ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:135:17: error: ‘MapSS’ has no member named ‘rows’
  135 |     int rows = b.rows;
      |                 ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:137:10: error: array subscript is not an integer
  137 |         b["data"][y][x] = p;
      |          ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c: In function ‘fill’:
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:142:17: error: ‘MapSS’ has no member named ‘cols’
  142 |     int cols = b.cols;
      |                 ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:143:17: error: ‘MapSS’ has no member named ‘rows’
  143 |     int rows = b.rows;
      |                 ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:148:14: error: array subscript is not an integer
  148 |             b["data"][y][x] = p;
      |              ^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c: In function ‘main’:
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:245:17: error: incompatible type for argument 1 of ‘fillRgb’
  245 |         fillRgb(b, 16773055);
      |                 ^
      |                 |
      |                 Anon1
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:155:19: note: expected ‘MapSS’ but argument is of type ‘Anon1’
  155 | int fillRgb(MapSS b, int rgb) {
      |             ~~~~~~^
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:246:17: error: incompatible type for argument 1 of ‘bezier3’
  246 |         bezier3(b, 20, 200, 700, 50, -300, 50, 380, 150, pixelFromRgb(4165615));
      |                 ^
      |                 |
      |                 Anon1
/tmp/ctranspile3026428885/bitmap-b-zier-curves-cubic.mochi.c:194:19: note: expected ‘MapSS’ but argument is of type ‘Anon1’
  194 | int bezier3(MapSS b, int x1, int y1, int x2, int y2, int x3, int y3, int x4, int y4, Pixel p) {
      |             ~~~~~~^

